manifests/apps/paperless/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-server-deployment
  labels:
    app: paperless-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-server
  template:
    metadata:
      labels:
        app: paperless-server
    spec:
      containers:
        - name: paperless-server
          image: paperless-server-container-image
          securityContext:
            runAsUser: 1000 # hardcoded `paperless` user
            runAsGroup: 1000
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "3000Mi"
              cpu: "270m"
            limits:
              memory: "3000Mi"
          volumeMounts:
            - name: paperless-server-pvc
              mountPath: /usr/src/paperless/consume
              subPath: consume
            - name: paperless-server-pvc
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: paperless-server-pvc
              mountPath: /usr/src/paperless/export
              subPath: export
            - name: paperless-server-pvc
              mountPath: /usr/src/paperless/media
              subPath: media
      volumes:
        - name: paperless-server-pvc
          persistentVolumeClaim:
            claimName: paperless-server-pvc
