manifests/apps/paperless/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-server-service
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: paperless-server
