manifests/apps/paperless/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  annotations:
    cert-manager.io/cluster-issuer: "prod-cert-issuer"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - paperless.blunders.me
    secretName: paperless-secret-tls
  rules:
  - host: paperless.blunders.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless-server-service
            port:
              number: 80
