manifests/apps/paperless/paperless/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
spec:
  hostnames:
    - paperless.blunders.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: paperless-server-service
          port: 80
